--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -1,6 +1,12 @@
 // Adobe Spectrum
 @import "@spectrum-css/vars/dist/spectrum-global.css";
+
 @import "@spectrum-css/vars/dist/spectrum-medium.css";
+
 @import "@spectrum-css/vars/dist/spectrum-light.css";
+@import "@spectrum-css/vars/dist/spectrum-dark.css";
+
 @import "@spectrum-css/page/dist/index-vars.css";
+@import "@spectrum-css/typography/dist/index-vars.css";
+@import "@spectrum-css/icon/dist/index-vars.css";
 @import "@spectrum-css/button/dist/index-vars.css";
